# cargo-goodtimes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  build.rs  flake.nix  mise.toml  package.json
.github/workflows/: ci.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DetailsPanel.tsx  GraphView.tsx
frontend/src/hooks/: useGraph.ts  useHashState.ts
frontend/src/lib/: types.ts
src/: cli.rs  main.rs  model.rs  output.rs
src/cargo_ops/: build.rs  metadata.rs  mod.rs
