[package]
name = "cargo-goodtimes"
version = "0.3.0"
edition = "2024"
description = "Interactive compilation timing analyzer — visualizes the critical path as a Gantt chart"
readme = "README.md"
repository = "https://github.com/bonega/cargo-goodtimes"
license = "MIT"
keywords = ["build", "cargo", "compilation", "profiling", "timing"]
categories = [
  "development-tools::cargo-plugins",
  "development-tools::profiling"
]
exclude = [
  ".direnv",
  ".envrc",
  "bun.lock",
  "flake.*",
  "frontend/.gitignore",
  "frontend/bun.lock",
  "frontend/index.html",
  "frontend/node_modules",
  "frontend/package.json",
  "frontend/src",
  "frontend/tsconfig.json",
  "frontend/vite.config.ts",
  "package.json",
  "screenshot.png",
]

[[bin]]
name = "cargo-goodtimes"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
webbrowser = "1"

[dev-dependencies]
cargo_metadata = { version = "0.19", features = ["builder"] }
